...
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="set">Set</string>
	<string name="xaxis">X-Axis</string>
	<string name="yaxis">Y-Axis</string>
	<string name="button_search">Search</string>
	<string name="element_key">Element Key</string>
	<string name="element_name">Element Name</string>
	<string name="column_type">Column Type</string>
	<string name="add_color_rule">Add Color Rule</string>
	<string name="delete_changes_to_color_rules">Delete Changes to Color Rules</string>
	<string name="column_width">Column Width</string>
	<string name="cannot_add_color_rule">Cannot Add Color Rule</string>
	<string name="cannot_revert_color_rules">Cannot Revert Color Rules</string>
	<string name="no_color_rules">No Color Rules</string>
	<string name="edit_color_rules">Edit Color Rules</string>
	<string name="box_stem_settings_title">Box-Stem Graph Settings</string>
	<string name="impossible_box_stem">At least one number column is required for box-stem graphs.</string>
	<!--  authority name for table files -->
	<string name="table_files_authority">org.opendatakit.tables.tablefilesauthority</string>
	<!-- For editing ListView things -->
	<string name="user_defined_listview_name_label">Name</string>
...
	<string name="name_of_new_table">Name of New Table</string>
	<string name="export">Export</string>
	<string name="sync">Sync</string>
	<string name="preferences">Preferences</string>
	<!-- For color rule things -->
	<string name="color_rule_for_map">Color Rule for Map</string>
	<string name="comparison_type">Comparison Type</string>
	<string name="value">Value</string>
	<string name="text_color">Text Color</string>
	<string name="background_color">Background Color</string>
	<string name="column">Column</string>
	<string name="sync_state_equals_synced_message">Was up to date after last sync.</string>
	<string name="sync_state_equals_synced_pending_files_message">Files need to be synced.</string>
	<string name="sync_state_equals_new_row_message">Has never been synced.</string>
	<string name="sync_state_equals_deleted_message">Will be deleted during sync.</string>
	<string name="sync_state_equals_in_conflict_message">Conflicts with server version.</string>
...
	<string name="sync_files_now">Sync files now</string>
	<string name="server_url">Aggregate URL:</string>
	<string name="default_server_url">http://opendatakit-2.appspot.com</string>
	<string name="save_all">Save All</string>
	<string name="next">Next</string>
	<string name="previous">Previous</string>
	<string name="save">Save</string>
	<string name="list_format">List Format</string>
	<string name="sync_no_tables_ready">There are no tables ready to be synched with the server.</string>
	<string name="press_to_add_color_rule">Press + to add a color rule</string>
	<string name="press_to_add_graph">Press + to add a graph.</string>
	<string name="list_view_settings">List View Settings</string>
	<string name="press_to_add_list_view">Press + to add a list view.</string>
...
	<string name="read_access_control_group">Read Access Control Group:</string>
	<string name="select_view">Select View</string>
	<string name="spreadsheet">Spreadsheet</string>
	<string name="error_while_changing_group_by_columns">Error while changing group by columns</string>
	<string name="error_while_changing_sort_column">Error while changing sort column</string>
	<string name="error_while_changing_index_column">Error while changing index column</string>
	<string name="list">List</string>
	<string name="graph">Graph</string>
	<string name="map">Map</string>
	<string name="preferred_view_type">Preferred View Type</string>
	<string name="sms_shortcut_name">Shortcut Name</string>
	<string name="sms_shortcut_input">Shortcut Input</string>
	<string name="sms_shortcut_output">Shortcut Output</string>
...
	<string name="yes">Yes</string>
	<string name="waiting_auth">Waiting on authentication</string>
	<string name="confirm_change_settings">Confirm Change Settings</string>
	<string name="change_settings_warning">If you change your settings, tables you have synched now may no longer be able to be synched.</string>
	<string name="choose_account">Please choose an account</string>
	<string name="please_wait">Please Wait</string>
	<string name="columns">Columns</string>
	<string name="cannot_edit_row_please_try_again">Cannot edit row, please try again</string>
	<string name="synchronizing">Synchronizing&#8230;</string>
	<string name="auth_expired">Authorization expired. Please re-authorize account.</string>
	<string name="sync_error">Sync Error</string>
	<string name="sync_table_result_success">Success</string>
	<string name="sync_table_result_failure">Failure</string>
...
	<string name="change_font_size">Change Font Size</string>
	<string name="display_prefs_for">Display Preferences for: %1$s</string>
	<string name="sort_column">Sort Column</string>
	<string name="sort_asc_desc">Sort Order</string>
	<string name="group_by_column">Group By Column</string>
	<string name="edit_rule">Edit Rule</string>
	<string name="compared_to_value">target comparison value</string>
	<string name="error_in_use_list_view_name">List view name %1$s is already in use!</string>
	<string name="add_list_view">Add New List View</string>
	<string name="nth_list_view_title">List View %1$d</string>
	<string name="delete_list_view">Delete this List View</string>
	<string name="edit_list_view">Edit this List View</string>
	<string name="confirm_delete_view_title">Confirm Delete List View</string>
...
	<string name="display_graph_view_settings">Graph View Settings</string>
	<string name="map_view_settings">Map View Settings</string>
	<string name="display_map_view_settings">Map View Settings</string>
	<string name="detail_view_file">Detail View File</string>
	<string name="default_survey_form">Default Survey Form</string>
	<string name="change_detail_view_file">Change Detail View File</string>
	<string name="edit_table_color_rules">Edit Table Color Rules</string>
	<string name="table_color_rules">Table Color Rules</string>
	<string name="edit_status_column_color_rules">Edit Status Column Color Rules</string>
	<string name="status_column_color_rules">Status Column Color Rules</string>
	<string name="add_new_color_rule">Add New Color Rule</string>
	<string name="selectable_column_color_rules">Selectable Column Color Rules</string>
	<string name="color_rule_preview">Color Rule Preview</string>
	<string name="status_column">Status Column</string>
	<string name="color_rule_title_for">Color Rules for %1$s</string>
	<string name="row_color_rule_title_for">Row Color Rules for %1$s</string>
	<string name="map_list_view_file">Map List View File</string>
	<string name="confirm_delete_color_rule">Confirm Delete Color Rule</string>
	<string name="are_you_sure_delete_color_rule">Please confirm deletion of color rule: %1$s</string>
	<string name="delete_color_rule">Delete this Color Rule</string>
	<string name="edit_color_rule">Edit this Color Rule</string>
	<string name="access_control_settings">Access Control Settings</string>
	<string name="none">None</string>
	<string name="manage_table_property_sets">Manage Table Property Sets</string>
	<string name="restore_defaults">Restore Defaults</string>
	<string name="save_to_defaults">Save Current to Defaults</string>
...
