<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
        android:id="@+id/menu_color_rule_list_new"
        android:title="@string/add_color_rule"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_new" />
    
    <item
        android:id="@+id/menu_color_rule_list_revert"
        android:title="@string/delete_changes_to_color_rules"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_discard" />
    

</menu>
...
