<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <!-- Add a row -->
    <item
        android:id="@+id/top_level_table_menu_add"
        android:icon="@drawable/ic_action_new"
        android:title="@string/add_row"
        android:showAsAction="always" />
    
    <!-- Select a view -->
    <item
...
	                android:title="@string/map" />
            </group>
        </menu>
    </item>
    
    <item
        android:id="@+id/top_level_table_menu_table_properties"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/preferences"
        android:showAsAction="always" />
            

</menu>
...
